VQ-1273: implemented i18n for Analytics

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1,33 +1,451 @@
 {
   "admin": {},
-  "auth": {},
+  "auth": {
+    "change_password": "修改密码",
+    "change_password_instruction": "设置您首选的密码",
+    "confirm_password": "确认密码",
+    "confirm_password_required": "确认密码必填",
+    "email_address": "电子邮件地址",
+    "email_invalid": "电子邮件地址无效",
+    "enhancing_business_performance": "提升业务绩效",
+    "enter_email_and_pass": "输入您的电子邮件地址和密码以访问账户。",
+    "forgot_password": "忘记密码？",
+    "forgot_password_instruction": "输入您的电子邮件地址和注册的电话号码以验证您的账户。",
+    "lead_text": "通过通过IT现代化和转型将IT与您的业务相匹配，最大化业务机会，降低成本并实现盈利。",
+    "login": "登录",
+    "new_password": "新密码",
+    "new_password_invalid": "密码必须至少为6个字符",
+    "otp": "一次性密码",
+    "otp_instruction": "已向您发送了一串四位数的验证代码",
+    "otp_required": "需要OTP值",
+    "password": "密码",
+    "password_required": "密码必填",
+    "passwords_must_match": "密码必须匹配",
+    "phone_number": "电话号码",
+    "phone_number_required": "电话号码必填",
+    "remember_me": "记住我",
+    "resend_code": "重新发送代码",
+    "save": "保存",
+    "submit": "提交",
+    "verification": "验证",
+    "verification_instruction": "选择我们应该发送验证代码的联系方式。",
+    "verify": "验证",
+    "via": "通过"
+  },
   "base": {
-    "home":"家",
-    "my_dashbaord":"我的仪表板",
-    "dashboard": "仪表盘",
     "accounts": "帐户",
-    "tickets": "票务",
-    "team": "团队",
     "administration": "管理",
-    "new_report": "新图表",
     "analytics": "分析",
-    "reinsurance": "再保险",
-    "no_of_tickets": "门票数量",
-    "view_all": "查看全部",
-    "summary" : "概括",
-    "my_policies": "我的保单",
+    "dashboard": "仪表板",
+    "home": "主页",
+    "my_dashboard": "我的仪表板",
+    "my_policies": "我的政策",
     "my_quotations": "我的报价",
-    "quotation": "报价"
+    "new_report": "新报告",
+    "no_of_tickets": "票数",
+    "policy": "政策",
+    "quotation": "报价",
+    "reinsurance": "再保险",
+    "summary": "摘要",
+    "team": "团队",
+    "tickets": "票",
+    "view_all": "查看全部"
   },
   "crm": {},
-  "entities": {},
+  "entities": {
+    "account_number": "帐号",
+    "account_number_required": "帐号是必需的",
+    "account_type": "帐户类型",
+    "account_type_required": "帐户类型是必需的",
+    "actions": "操作",
+    "activities": "活动",
+    "add": "添加",
+    "add_new": "新增",
+    "add_next_of_kin": "添加亲属",
+    "additional_info": "附加信息",
+    "all": "全部",
+    "aml_details": "AML 详情",
+    "amount": "金额",
+    "assign_manageable_apps": "分配可管理的应用",
+    "assign_role": "分配角色",
+    "assign_supervisor": "分配监督人",
+    "bank": "银行",
+    "bank_details": "银行详情",
+    "bank_required": "银行是必需的",
+    "banking_details": "银行详情",
+    "basic_information": "基本信息",
+    "branch": "分行",
+    "branch_required": "分行是必需的",
+    "business_accounts": "商业帐户",
+    "business_unit": "业务单位",
+    "cancel": "取消",
+    "category": "类别",
+    "category_required": "类别是必需的",
+    "cert_reg_no": "证书注册号",
+    "cert_reg_year": "证书注册年份",
+    "citizenship": "国籍",
+    "citizenship_required": "国籍是必需的",
+    "city": "城市",
+    "claim_number": "索赔号",
+    "claim_tracking_insights": "索赔跟踪见解",
+    "claims": "索赔",
+    "client": "客户",
+    "client_account": "客户账户",
+    "client_details": "客户详情",
+    "client_information": "客户信息",
+    "client_type": "客户类型",
+    "complete": "完成",
+    "contact": "联系",
+    "contact_details": "联系方式",
+    "corporate": "公司",
+    "corporate_details_here": "公司详情",
+    "country": "国家",
+    "country_code_required": "国家代码是必需的",
+    "country_of_inc": "注册国家",
+    "country_of_inc_required": "注册国家是必需的",
+    "country_required": "国家是必需的",
+    "county": "县",
+    "county_required": "县是必需的",
+    "cover_from": "覆盖从",
+    "cover_to": "覆盖到",
+    "credit": "信用",
+    "credit_allowed": "允许信用",
+    "credit_allowed_required": "允许信用是必需的",
+    "credit_limit": "信用额度",
+    "credit_limit_required": "信用额度是必需的",
+    "currency": "货币",
+    "currency_required": "货币是必需的",
+    "customer_since": "客户自",
+    "date_authorized": "授权日期",
+    "debit": "借方",
+    "department": "部门",
+    "distribute_channel": "分发渠道",
+    "distribute_channel_required": "分发渠道是必需的",
+    "divorced": "离异",
+    "dob": "出生日期",
+    "document": "文件",
+    "e_doc_required": "电子文件是必需的",
+    "e_docs": "电子文件",
+    "economic_sector": "经济部门",
+    "economic_sector_required": "经济部门是必需的",
+    "edit": "编辑",
+    "email": "电子邮件",
+    "email_address": "电子邮件地址",
+    "employed": "就业",
+    "employee_name": "员工姓名",
+    "employees": "员工",
+    "employment_details": "雇佣详情",
+    "entities": "实体",
+    "entity": "实体",
+    "entity_name": "实体名称",
+    "entity_type": "实体类型",
+    "female": "女性",
+    "filter": "筛选",
+    "first_name": "名字",
+    "first_name_required": "名字是必需的",
+    "format": "格式",
+    "from": "从",
+    "full_names": "全名",
+    "gender": "性别",
+    "gender_required": "性别是必需的",
+    "go_back": "返回",
+    "group": "群组",
+    "help": "帮助",
+    "house_name": "门牌号码",
+    "house_name_required": "门牌号码是必需的",
+    "iban": "IBAN",
+    "iban_required": "IBAN是必需的",
+    "id": "ID",
+    "id_number": "身份证号",
+    "id_number_required": "身份证号是必需的",
+    "id_type": "ID类型",
+    "identifier": "标识符",
+    "identifier_no": "标识符号码",
+    "identity": "身份",
+    "identity_type": "身份类型",
+    "identity_type_required": "身份类型是必需的",
+    "if_consented_to_e_docs": "如果同意电子文件",
+    "import_account": "导入帐户",
+    "import_client": "导入客户",
+    "import_service_provider": "导入服务提供商",
+    "import_users": "导入用户",
+    "in_force_premium": "生效保费",
+    "incurred_amount": "发生的金额",
+    "individual": "个人",
+    "information": "信息",
+    "intermediary": "中介",
+    "location": "位置",
+    "loss_ratio": "损失比率",
+    "ltv": "LTV",
+    "male": "男性",
+    "manage_roles": "管理角色",
+    "maried": "已婚",
+    "marital_status": "婚姻状况",
+    "marital_status_required": "婚姻状况是必需的",
+    "mobile": "移动",
+    "mobile_money": "移动货币",
+    "mobile_number": "手机号码",
+    "module": "模块",
+    "monthly": "每月",
+    "more_information": "更多信息",
+    "mpay_no": "MPay 号",
+    "mpay_no_required": "MPay 号是必需的",
+    "name": "名称",
+    "nationality": "国籍",
+    "nb": "注意",
+    "nb_consented": "注意：如果同意电子文件",
+    "new": "新建",
+    "new_account": "新帐户",
+    "new_business_account": "新业务帐户",
+    "new_claim": "新索赔",
+    "new_client": "新客户",
+    "new_entity": "新实体",
+    "new_policy": "新政策",
+    "new_quote": "新报价",
+    "new_service_provider": "新服务提供商",
+    "next": "下一步",
+    "next_of_kins": "亲属",
+    "no": "否",
+    "no_agent_found": "未找到代理",
+    "no_claim_found": "未找到索赔",
+    "no_employees_found": "未找到员工",
+    "no_next_of_kin_found": "未找到亲属",
+    "no_policy_found": "未找到政策",
+    "no_quotation_found": "未找到报价",
+    "no_service_provider_found": "未找到服务提供商",
+    "no_transactions_found": "未找到交易",
+    "no_users_found": "未找到用户",
+    "note": "注意",
+    "notification_date": "通知日期",
+    "occupation": "职业",
+    "operation_country": "运营国家",
+    "optional": "可选",
+    "organisation": "组织",
+    "other_details": "其他详情",
+    "other_name": "其他名称",
+    "other_name_required": "其他名称是必需的",
+    "others": "其他",
+    "outstanding_premium": "未付保费",
+    "overdue": "逾期",
+    "overview": "概述",
+    "parent_company": "母公司",
+    "parent_country": "母公司国家",
+    "party_id_type": "当事人 ID 类型",
+    "party_type": "当事人类型",
+    "passport_number": "护照号码",
+    "payments": "支付",
+    "personal_info": "个人信息",
+    "personnel_rank": "人员级别",
+    "personnel_rank_required": "人员级别是必需的",
+    "phone_number": "电话号码",
+    "phone_number_required": "电话号码是必需的",
+    "physical_address": "物理地址",
+    "pin_number": "PIN 号码",
+    "pin_number_required": "PIN 号码是必需的",
+    "po_box": "邮政信箱",
+    "po_box_required": "邮政信箱是必需的",
+    "policies": "政策",
+    "policies_in_force": "有效政策",
+    "policy_number": "政策号码",
+    "postal_address_details": "邮寄地址详情",
+    "preferred_channel": "首选渠道",
+    "preferred_channel_required": "首选渠道是必需的",
+    "preferred_contact_channel": "首选联系渠道",
+    "preferred_payment_account": "首选付款账户",
+    "premium": "保费",
+    "premium_frequency": "保费频率",
+    "premium_frequency_required": "保费频率是必需的",
+    "primary": "主要",
+    "primary_id_type": "主要 ID 类型",
+    "primary_phone_number": "主要电话号码",
+    "prime_identity": "主要身份",
+    "product": "产品",
+    "products_performance": "产品表现",
+    "profile": "个人资料",
+    "profile_photo": "个人照片",
+    "provider_types": "提供商类型",
+    "provider_types_required": "提供商类型是必需的",
+    "purpose_of_insurance": "保险目的",
+    "purpose_of_insurance_required": "保险目的是必需的",
+    "quotation_number": "报价号码",
+    "quotations": "报价",
+    "recent_policies": "最近的政策",
+    "recent_quotations": "最近的报价",
+    "ref_number": "参考号码",
+    "reg_date": "注册日期",
+    "reg_name": "注册名称",
+    "related_accounts": "相关帐户",
+    "relation": "关系",
+    "reports": "报告",
+    "reports_content": "报告内容",
+    "required": "必需的",
+    "residential_address_details": "住宅地址详情",
+    "road": "道路",
+    "road_required": "道路是必需的",
+    "roles": "角色",
+    "save": "保存",
+    "secondary_phone_number": "次要电话号码",
+    "sector": "行业",
+    "select": "选择",
+    "select_account_type": "选择账户类型",
+    "select_channel": "选择渠道",
+    "select_citizenship": "选择国籍",
+    "select_currency": "选择货币",
+    "select_document": "选择文件",
+    "select_employment": "选择就业情况",
+    "select_gender": "选择性别",
+    "select_marital_status": "选择婚姻状况",
+    "select_occupation": "选择职业",
+    "select_option": "选择选项",
+    "select_role": "选择角色",
+    "select_sector": "选择行业",
+    "select_supervisor": "选择主管",
+    "select_title": "选择职称",
+    "self_employed": "自雇",
+    "seperated": "分居",
+    "service_provider": "服务提供商",
+    "share": "分享",
+    "short_codes": "短码",
+    "single": "单身",
+    "sms": "短信",
+    "sms_number": "短信号码",
+    "sms_number_format": "短信号码格式",
+    "sms_required": "需要短信",
+    "source_of_funds": "资金来源",
+    "source_of_funds_required": "需要资金来源",
+    "source_of_wealth": "财富来源",
+    "staff": "员工",
+    "statement_summary": "账单摘要",
+    "status": "状态",
+    "supervisor": "主管",
+    "surname": "姓氏",
+    "surname_required": "姓氏是必需的",
+    "system": "系统",
+    "tax_id": "税号",
+    "tel_number": "电话号码",
+    "tel_number_format": "电话号码格式",
+    "tel_number_required": "电话号码是必需的",
+    "title": "称谓",
+    "title_required": "称谓是必需的",
+    "to": "至",
+    "total_amount": "总额",
+    "town": "城镇",
+    "town_required": "城镇是必需的",
+    "trade_name": "商业名称",
+    "trading_names": "交易名称",
+    "trans_date": "交易日期",
+    "transaction_type": "交易类型",
+    "transactions": "交易",
+    "transactions_content": "交易内容",
+    "type": "类型",
+    "type_of_employment": "雇佣类型",
+    "type_of_employment_required": "雇佣类型是必需的",
+    "unallocated_cash": "未分配现金",
+    "upcoming": "即将到来",
+    "upload_image": "上传图像",
+    "upload_utility_bill": "上传水电费账单",
+    "upload_utility_bill_required": "上传水电费账单是必需的",
+    "user": "用户",
+    "user_type": "用户类型",
+    "username": "用户名",
+    "username_required": "用户名是必需的",
+    "users": "用户",
+    "utility_bill": "水电费账单",
+    "utility_bill_required": "水电费账单是必需的",
+    "vat_applicable": "适用增值税",
+    "vat_applicable_required": "适用增值税是必需的",
+    "view": "查看",
+    "view_all": "查看全部",
+    "view_claims": "查看索赔",
+    "view_entity_details": "查看实体详情",
+    "view_full_report": "查看完整报告",
+    "view_payments": "查看付款",
+    "view_policies": "查看政策",
+    "view_quotations": "查看报价",
+    "view_related_accounts": "查看相关账户",
+    "wealth_aml_details": "财富反洗钱详情",
+    "wealth_details": "财富详情",
+    "weekly": "每周",
+    "widowed": "丧偶",
+    "with_effect_from": "生效日期",
+    "with_effect_from_required": "生效日期是必需的",
+    "with_effect_to": "截止日期",
+    "with_effect_to_required": "截止日期是必需的",
+    "withholding_tax": "代扣税",
+    "withholding_tax_applicable": "适用代扣税",
+    "withholding_tax_applicable_required": "适用代扣税是必需的",
+    "withholding_tax_required": "代扣税是必需的",
+    "yes": "是",
+    "zero": "零"
+  },
   "gis": {},
   "lms": {
       "common": {},
       "ind": {},
       "grp": {}
   },
-  "reports": {
+  "report": {
+    "action": "操作",
+    "add": "添加",
+    "add_reports": "添加报告",
+    "advanced_filter": "高级过滤器",
+    "apply": "应用",
+    "ascending": "升序",
+    "category": "类别",
+    "column": "列",
+    "complete": "完成",
+    "condition": "条件",
+    "confirm_delete_message": "确定要删除吗？",
+    "continue": "继续",
+    "create": "创建",
+    "create_dashboard": "创建仪表板",
+    "create_new": "创建新的",
+    "created_by": "创建者",
+    "dashboard": "仪表板",
+    "dashboard_desc": "通过我们的交互式仪表板轻松发现见解并做出数据驱动的决策。",
+    "dashboard_name": "仪表板名称",
+    "dashboards": "仪表板",
+    "date_created": "创建日期",
+    "delete": "删除",
+    "descending": "降序",
+    "download": "下载",
+    "edit": "编辑",
+    "enter_color_scheme_name": "输入颜色方案名称",
+    "explore_dashboard": "探索仪表板",
+    "explore_reports": "探索报告",
+    "filter": "过滤",
+    "Filters": "过滤器",
+    "finance": "财务",
+    "glance_into_dashboards": "浏览仪表板",
+    "glance_into_reports": "浏览报告",
+    "go_back": "返回",
+    "id": "ID",
+    "my_reports": "我的报告",
+    "name": "名称",
+    "net_premium": "净保费",
+    "no": "否",
+    "operations": "操作",
+    "operator": "操作员",
+    "other": "其他",
+    "pick_destination": "选择报告的目的地",
+    "pick_square": "选择一个正方形以添加颜色",
+    "quota_premium": "配额保费",
+    "rename": "重命名",
+    "report": "报告",
+    "report_desc": "探索关键绩效指标和趋势，以做出明智的决策并优化基于数据的战略。",
+    "report_name": "报告名称",
+    "reports": "报告",
+    "save": "保存",
+    "share": "分享",
+    "shared_reports": "共享的报告",
+    "sort": "排序",
+    "style": "样式",
+    "subject_area": "主题区域",
+    "value": "值",
+    "view_all": "查看全部",
+    "visualization": "可视化",
+    "yes": "是",
+    "ytd_premium": "截至今日的年度保费"
   },
   "setups": {}
 }
