--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,33 +1,451 @@
 {
   "admin": {},
-  "auth": {},
+  "auth": {
+    "change_password": "Cambiar contraseña",
+    "change_password_instruction": "Establecer su contraseña preferida",
+    "confirm_password": "Confirmar contraseña",
+    "confirm_password_required": "Se requiere confirmar contraseña",
+    "email_address": "Dirección de correo electrónico",
+    "email_invalid": "La dirección de correo electrónico no es válida",
+    "enhancing_business_performance": "Mejorar el rendimiento empresarial",
+    "enter_email_and_pass": "Ingrese su dirección de correo electrónico y contraseña para acceder a la cuenta.",
+    "forgot_password": "¿Olvidó su contraseña?",
+    "forgot_password_instruction": "Ingrese su dirección de correo electrónico y número de teléfono registrado para verificar su cuenta.",
+    "lead_text": "Maximice las oportunidades comerciales, reduzca costos y logre rentabilidad al alinear TI con su negocio a través de la modernización y transformación de TI.",
+    "login": "Iniciar sesión",
+    "new_password": "Nueva contraseña",
+    "new_password_invalid": "La contraseña debe tener al menos 6 caracteres",
+    "otp": "Contraseña de un solo uso",
+    "otp_instruction": "Se ha enviado un código de verificación de cuatro dígitos a su",
+    "otp_required": "Se requiere el valor de OTP",
+    "password": "Contraseña",
+    "password_required": "Se requiere contraseña",
+    "passwords_must_match": "Las contraseñas deben coincidir",
+    "phone_number": "Número de teléfono",
+    "phone_number_required": "Se requiere el número de teléfono",
+    "remember_me": "Recuérdame",
+    "resend_code": "Reenviar código",
+    "save": "Guardar",
+    "submit": "Enviar",
+    "verification": "Verificación",
+    "verification_instruction": "Seleccione qué detalles de contacto deberíamos enviar el código de verificación.",
+    "verify": "Verificar",
+    "via": "A través de"
+  },
   "base": {
-    "home": "inicio",
-    "my_dashbaord": "mi panel",
-    "dashboard": "panel de control",
-    "accounts": "cuentas",
-    "tickets": "Boletos",
-    "team": "equipo",
-    "administration": "administración",
-    "new_report": "nuevo gráfico",
-    "analytics": "analítica",
-    "reinsurance": "reaseguro",
-    "no_of_tickets": "Número de entradas",
-    "view_all": "VER TODO",
-    "summary": "resumen",
+    "accounts": "Cuentas",
+    "administration": "Administración",
+    "analytics": "Análisis",
+    "dashboard": "Tablero",
+    "home": "Inicio",
+    "my_dashboard": "Mi tablero",
     "my_policies": "Mis Pólizas",
     "my_quotations": "Mis Cotizaciones",
-    "quotation": "Cotización"
-  },
+    "new_report": "Nuevo Informe",
+    "no_of_tickets": "Número de Boletos",
+    "policy": "Póliza",
+    "quotation": "Cotización",
+    "reinsurance": "Reaseguro",
+    "summary": "Resumen",
+    "team": "Equipo",
+    "tickets": "Boletos",
+    "view_all": "VER TODO"
+},
   "crm": {},
-  "entities": {},
+  "entities": {
+    "account_number": "Número de cuenta",
+    "account_number_required": "Número de cuenta requerido",
+    "account_type": "Tipo de cuenta",
+    "account_type_required": "Tipo de cuenta requerido",
+    "actions": "Acciones",
+    "activities": "Actividades",
+    "add": "Agregar",
+    "add_new": "Agregar nuevo",
+    "add_next_of_kin": "Agregar familiar cercano",
+    "additional_info": "Información adicional",
+    "all": "Todos",
+    "aml_details": "Detalles de AML",
+    "amount": "Monto",
+    "assign_manageable_apps": "Asignar aplicaciones gestionables",
+    "assign_role": "Asignar rol",
+    "assign_supervisor": "Asignar supervisor",
+    "bank": "Banco",
+    "bank_details": "Detalles bancarios",
+    "bank_required": "Banco requerido",
+    "banking_details": "Detalles bancarios",
+    "basic_information": "Información básica",
+    "branch": "Sucursal",
+    "branch_required": "Sucursal requerida",
+    "business_accounts": "Cuentas comerciales",
+    "business_unit": "Unidad de negocios",
+    "cancel": "Cancelar",
+    "category": "Categoría",
+    "category_required": "Categoría requerida",
+    "cert_reg_no": "Número de registro del certificado",
+    "cert_reg_year": "Año de registro del certificado",
+    "citizenship": "Ciudadanía",
+    "citizenship_required": "Ciudadanía requerida",
+    "city": "Ciudad",
+    "claim_number": "Número de reclamo",
+    "claim_tracking_insights": "Información de seguimiento de reclamos",
+    "claims": "Reclamos",
+    "client": "Cliente",
+    "client_account": "Cuenta del cliente",
+    "client_details": "Detalles del cliente",
+    "client_information": "Información del cliente",
+    "client_type": "Tipo de cliente",
+    "complete": "Completar",
+    "contact": "Contacto",
+    "contact_details": "Detalles de contacto",
+    "corporate": "Corporativo",
+    "corporate_details_here": "Detalles corporativos aquí",
+    "country": "País",
+    "country_code_required": "Código de país requerido",
+    "country_of_inc": "País de incorporación",
+    "country_of_inc_required": "País de incorporación requerido",
+    "country_required": "País requerido",
+    "county": "Condado",
+    "county_required": "Condado requerido",
+    "cover_from": "Cobertura desde",
+    "cover_to": "Cobertura hasta",
+    "credit": "Crédito",
+    "credit_allowed": "Crédito permitido",
+    "credit_allowed_required": "Crédito permitido requerido",
+    "credit_limit": "Límite de crédito",
+    "credit_limit_required": "Límite de crédito requerido",
+    "currency": "Moneda",
+    "currency_required": "Moneda requerida",
+    "customer_since": "Cliente desde",
+    "date_authorized": "Fecha autorizada",
+    "debit": "Débito",
+    "department": "Departamento",
+    "distribute_channel": "Canal de distribución",
+    "distribute_channel_required": "Canal de distribución requerido",
+    "divorced": "Divorciado",
+    "dob": "Fecha de nacimiento",
+    "document": "Documento",
+    "e_doc_required": "Documento electrónico requerido",
+    "e_docs": "Documentos electrónicos",
+    "economic_sector": "Sector económico",
+    "economic_sector_required": "Sector económico requerido",
+    "edit": "Editar",
+    "email": "Correo electrónico",
+    "email_address": "Dirección de correo electrónico",
+    "employed": "Empleado",
+    "employee_name": "Nombre del empleado",
+    "employees": "Empleados",
+    "employment_details": "Detalles del empleo",
+    "entities": "Entidades",
+    "entity": "Entidad",
+    "entity_name": "Nombre de la entidad",
+    "entity_type": "Tipo de entidad",
+    "female": "Femenino",
+    "filter": "Filtrar",
+    "first_name": "Nombre",
+    "first_name_required": "Nombre requerido",
+    "format": "Formato",
+    "from": "De",
+    "full_names": "Nombres completos",
+    "gender": "Género",
+    "gender_required": "Género requerido",
+    "go_back": "Volver",
+    "group": "Grupo",
+    "help": "Ayuda",
+    "house_name": "Nombre/Número de la casa",
+    "house_name_required": "Nombre/Número de la casa requerido",
+    "iban": "IBAN",
+    "iban_required": "IBAN requerido",
+    "id": "ID",
+    "id_number": "Número de identificación",
+    "id_number_required": "Número de identificación requerido",
+    "id_type": "Tipo de ID",
+    "identifier": "Identificador",
+    "identifier_no": "Número de identificación",
+    "identity": "Identidad",
+    "identity_type": "Tipo de identidad",
+    "identity_type_required": "Tipo de identidad requerido",
+    "if_consented_to_e_docs": "Si ha dado consentimiento para documentos electrónicos",
+    "import_account": "Importar cuenta",
+    "import_client": "Importar cliente",
+    "import_service_provider": "Importar proveedor de servicios",
+    "import_users": "Importar usuarios",
+    "in_force_premium": "Prima en vigor",
+    "incurred_amount": "Monto incurrido",
+    "individual": "Individual",
+    "information": "Información",
+    "intermediary": "Intermediario",
+    "location": "Ubicación",
+    "loss_ratio": "Ratio de pérdidas",
+    "ltv": "LTV",
+    "male": "Masculino",
+    "manage_roles": "Gestionar roles",
+    "maried": "Casado",
+    "marital_status": "Estado civil",
+    "marital_status_required": "Estado civil requerido",
+    "mobile": "Móvil",
+    "mobile_money": "Dinero móvil",
+    "mobile_number": "Número de teléfono móvil",
+    "module": "Módulo",
+    "monthly": "Mensual",
+    "more_information": "Más información",
+    "mpay_no": "Número de MPay",
+    "mpay_no_required": "Número de MPay requerido",
+    "name": "Nombre",
+    "nationality": "Nacionalidad",
+    "nb": "Nota",
+    "nb_consented": "NB: Si ha dado consentimiento para documentos electrónicos",
+    "new": "Nuevo",
+    "new_account": "Nueva cuenta",
+    "new_business_account": "Nueva cuenta comercial",
+    "new_claim": "Nuevo reclamo",
+    "new_client": "Nuevo cliente",
+    "new_entity": "Nueva entidad",
+    "new_policy": "Nueva póliza",
+    "new_quote": "Nueva cotización",
+    "new_service_provider": "Nuevo proveedor de servicios",
+    "next": "Siguiente",
+    "next_of_kins": "Familiares cercanos",
+    "no": "No",
+    "no_agent_found": "No se encontró agente",
+    "no_claim_found": "No se encontró reclamo",
+    "no_employees_found": "No se encontraron empleados",
+    "no_next_of_kin_found": "No se encontró familiar cercano",
+    "no_policy_found": "No se encontró póliza",
+    "no_quotation_found": "No se encontró cotización",
+    "no_service_provider_found": "No se encontró proveedor de servicios",
+    "no_transactions_found": "No se encontraron transacciones",
+    "no_users_found": "No se encontraron usuarios",
+    "note": "Nota",
+    "notification_date": "Fecha de notificación",
+    "occupation": "Ocupación",
+    "operation_country": "País de operación",
+    "optional": "Opcional",
+    "organisation": "Organización",
+    "other_details": "Otros detalles",
+    "other_name": "Otro nombre",
+    "other_name_required": "Otro nombre requerido",
+    "others": "Otros",
+    "outstanding_premium": "Prima pendiente",
+    "overdue": "Atrasado",
+    "overview": "Resumen",
+    "parent_company": "Empresa matriz",
+    "parent_country": "País matriz",
+    "party_id_type": "Tipo de ID de la parte",
+    "party_type": "Tipo de parte",
+    "passport_number": "Número de pasaporte",
+    "payments": "Pagos",
+    "personal_info": "Información personal",
+    "personnel_rank": "Rango del personal",
+    "personnel_rank_required": "Rango del personal requerido",
+    "phone_number": "Número de teléfono",
+    "phone_number_required": "Número de teléfono requerido",
+    "physical_address": "Dirección física",
+    "pin_number": "Número de PIN",
+    "pin_number_required": "Número de PIN requerido",
+    "po_box": "Apartado postal",
+    "po_box_required": "Apartado postal requerido",
+    "policies": "Pólizas",
+    "policies_in_force": "Pólizas vigentes",
+    "policy_number": "Número de póliza",
+    "postal_address_details": "Detalles de la dirección postal",
+    "preferred_channel": "Canal preferido",
+    "preferred_channel_required": "Canal preferido requerido",
+    "preferred_contact_channel": "Canal de contacto preferido",
+    "preferred_payment_account": "Cuenta de pago preferida",
+    "premium": "Prima",
+    "premium_frequency": "Frecuencia de prima",
+    "premium_frequency_required": "Frecuencia de prima requerida",
+    "primary": "Primario",
+    "primary_id_type": "Tipo de ID primario",
+    "primary_phone_number": "Número de teléfono primario",
+    "prime_identity": "Identidad principal",
+    "product": "Producto",
+    "products_performance": "Rendimiento de productos",
+    "profile": "Perfil",
+    "profile_photo": "Foto de perfil",
+    "provider_types": "Tipos de proveedores",
+    "provider_types_required": "Tipos de proveedores requeridos",
+    "purpose_of_insurance": "Propósito del seguro",
+    "purpose_of_insurance_required": "Propósito del seguro requerido",
+    "quotation_number": "Número de cotización",
+    "quotations": "Cotizaciones",
+    "recent_policies": "Pólizas recientes",
+    "recent_quotations": "Cotizaciones recientes",
+    "ref_number": "Número de referencia",
+    "reg_date": "Fecha de registro",
+    "reg_name": "Nombre de registro",
+    "related_accounts": "Cuentas relacionadas",
+    "relation": "Relación",
+    "reports": "Informes",
+    "reports_content": "Contenido de los informes",
+    "required": "Requerido",
+    "residential_address_details": "Detalles de la dirección residencial",
+    "road": "Calle",
+    "road_required": "Calle requerida",
+    "roles": "Roles",
+    "save": "Guardar",
+    "secondary_phone_number": "Número de teléfono secundario",
+    "sector": "",
+    "select": "Seleccionar",
+    "select_account_type": "Seleccionar tipo de cuenta",
+    "select_channel": "Seleccionar canal",
+    "select_citizenship": "Seleccionar ciudadanía",
+    "select_currency": "Seleccionar moneda",
+    "select_document": "Seleccionar documento",
+    "select_employment": "Seleccionar empleo",
+    "select_gender": "Seleccionar género",
+    "select_marital_status": "Seleccionar estado civil",
+    "select_occupation": "Seleccionar ocupación",
+    "select_option": "Seleccionar opción",
+    "select_role": "Seleccionar rol",
+    "select_sector": "Seleccionar sector",
+    "select_supervisor": "Seleccionar supervisor",
+    "select_title": "Seleccionar título",
+    "self_employed": "Trabajador autónomo",
+    "seperated": "Separado",
+    "service_provider": "Proveedor de servicios",
+    "share": "Compartir",
+    "short_codes": "Códigos cortos",
+    "single": "Soltero",
+    "sms": "SMS",
+    "sms_number": "Número de SMS",
+    "sms_number_format": "Formato de número de SMS",
+    "sms_required": "SMS requerido",
+    "source_of_funds": "Fuente de fondos",
+    "source_of_funds_required": "Fuente de fondos requerida",
+    "source_of_wealth": "Fuente de riqueza",
+    "staff": "Personal",
+    "statement_summary": "Resumen de Estado de Cuenta",
+    "status": "Estado",
+    "supervisor": "Supervisor",
+    "surname": "Apellido",
+    "surname_required": "Apellido es obligatorio",
+    "system": "Sistema",
+    "tax_id": "ID de Impuestos",
+    "tel_number": "Número de Teléfono",
+    "tel_number_format": "Formato de Número de Teléfono",
+    "tel_number_required": "Número de Teléfono es obligatorio",
+    "title": "Título",
+    "title_required": "Título es obligatorio",
+    "to": "A",
+    "total_amount": "Monto Total",
+    "town": "Ciudad",
+    "town_required": "Ciudad es obligatoria",
+    "trade_name": "Nombre Comercial",
+    "trading_names": "Nombres Comerciales",
+    "trans_date": "Fecha de Transacción",
+    "transaction_type": "Tipo de Transacción",
+    "transactions": "Transacciones",
+    "transactions_content": "Contenido de Transacciones",
+    "type": "Tipo",
+    "type_of_employment": "Tipo de Empleo",
+    "type_of_employment_required": "Tipo de Empleo es obligatorio",
+    "unallocated_cash": "Efectivo No Asignado",
+    "upcoming": "Próximo",
+    "upload_image": "Subir Imagen",
+    "upload_utility_bill": "Subir Factura de Servicios Públicos",
+    "upload_utility_bill_required": "Subir Factura de Servicios Públicos es obligatorio",
+    "user": "Usuario",
+    "user_type": "Tipo de Usuario",
+    "username": "Nombre de Usuario",
+    "username_required": "Nombre de Usuario es obligatorio",
+    "users": "Usuarios",
+    "utility_bill": "Factura de Servicios Públicos",
+    "utility_bill_required": "Factura de Servicios Públicos es obligatoria",
+    "vat_applicable": "IVA Aplicable",
+    "vat_applicable_required": "IVA Aplicable es obligatorio",
+    "view": "Ver",
+    "view_all": "Ver Todo",
+    "view_claims": "Ver Reclamaciones",
+    "view_entity_details": "Ver Detalles de la Entidad",
+    "view_full_report": "Ver Informe Completo",
+    "view_payments": "Ver Pagos",
+    "view_policies": "Ver Pólizas",
+    "view_quotations": "Ver Cotizaciones",
+    "view_related_accounts": "Ver Cuentas Relacionadas",
+    "wealth_aml_details": "Detalles de AML de Riqueza",
+    "wealth_details": "Detalles de Riqueza",
+    "weekly": "Semanal",
+    "widowed": "Viudo",
+    "with_effect_from": "Con Efecto Desde",
+    "with_effect_from_required": "Con Efecto Desde es obligatorio",
+    "with_effect_to": "Con Efecto Hasta",
+    "with_effect_to_required": "Con Efecto Hasta es obligatorio",
+    "withholding_tax": "Impuesto de Retención",
+    "withholding_tax_applicable": "Impuesto de Retención Aplicable",
+    "withholding_tax_applicable_required": "Impuesto de Retención Aplicable es obligatorio",
+    "withholding_tax_required": "Impuesto de Retención es obligatorio",
+    "yes": "Sí",
+    "zero": "Cero"
+  },
   "gis": {},
   "lms": {
       "common": {},
       "ind": {},
       "grp": {}
   },
-  "reports": {
+  "report": {
+    "action": "Acción",
+    "add": "Agregar",
+    "add_reports": "Agregar informe(s)",
+    "advanced_filter": "Filtro avanzado",
+    "apply": "Aplicar",
+    "ascending": "Ascendente",
+    "category": "Categoría",
+    "column": "Columna",
+    "complete": "Completo",
+    "condition": "Condición",
+    "confirm_delete_message": "¿Estás seguro de que quieres eliminar?",
+    "continue": "Continuar",
+    "create": "Crear",
+    "create_dashboard": "Crear tablero de control",
+    "create_new": "Crear nuevo",
+    "created_by": "Creado por",
+    "dashboard": "Tablero de control",
+    "dashboard_desc": "Descubre ideas y toma decisiones basadas en datos sin esfuerzo con nuestro tablero interactivo.",
+    "dashboard_name": "Nombre del tablero de control",
+    "dashboards": "Tableros de control",
+    "date_created": "Fecha de creación",
+    "delete": "Eliminar",
+    "descending": "Descendente",
+    "download": "Descargar",
+    "edit": "Editar",
+    "enter_color_scheme_name": "Ingrese el nombre del esquema de color",
+    "explore_dashboard": "Explorar tablero de control",
+    "explore_reports": "Explorar informes",
+    "filter": "Filtrar",
+    "Filters": "Filtros",
+    "finance": "Finanzas",
+    "glance_into_dashboards": "Un vistazo a los tableros de control",
+    "glance_into_reports": "Un vistazo a los informes",
+    "go_back": "Volver",
+    "id": "ID",
+    "my_reports": "Mis informes",
+    "name": "Nombre",
+    "net_premium": "Prima neta",
+    "no": "No",
+    "operations": "Operaciones",
+    "operator": "Operador",
+    "other": "Otro",
+    "pick_destination": "Selecciona un destino para tu informe",
+    "pick_square": "Selecciona un cuadrado para agregar color",
+    "quota_premium": "Prima de cuota",
+    "rename": "Cambiar nombre",
+    "report": "Informe",
+    "report_desc": "Explora métricas clave de rendimiento y tendencias para tomar decisiones informadas y optimizar tu estrategia basada en datos.",
+    "report_name": "Nombre del informe",
+    "reports": "Informes",
+    "save": "Guardar",
+    "share": "Compartir",
+    "shared_reports": "Informes compartidos",
+    "sort": "Ordenar",
+    "style": "Estilo",
+    "subject_area": "Área de tema",
+    "value": "Valor",
+    "view_all": "Ver todo",
+    "visualization": "Visualización",
+    "yes": "Sí",
+    "ytd_premium": "Prima del año hasta la fecha"
   },
   "setups": {}
 }
