--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,33 +1,451 @@
 {
   "admin": {},
-  "auth": {},
+  "auth": {
+    "change_password": "Changer le mot de passe",
+    "change_password_instruction": "Définissez votre mot de passe préféré",
+    "confirm_password": "Confirmer le mot de passe",
+    "confirm_password_required": "La confirmation du mot de passe est requise",
+    "email_address": "Adresse e-mail",
+    "email_invalid": "L'adresse e-mail n'est pas valide",
+    "enhancing_business_performance": "Améliorer la performance commerciale",
+    "enter_email_and_pass": "Entrez votre adresse e-mail et votre mot de passe pour accéder au compte.",
+    "forgot_password": "Mot de passe oublié ?",
+    "forgot_password_instruction": "Entrez votre adresse e-mail et votre numéro de téléphone enregistré pour vérifier votre compte.",
+    "lead_text": "Maximisez les opportunités commerciales, réduisez les coûts et atteignez la rentabilité en alignant l'informatique sur votre entreprise grâce à la modernisation et à la transformation informatique.",
+    "login": "Connexion",
+    "new_password": "Nouveau mot de passe",
+    "new_password_invalid": "Le mot de passe doit comporter au moins 6 caractères",
+    "otp": "Mot de passe à usage unique",
+    "otp_instruction": "Un code de vérification à quatre chiffres a été envoyé à votre",
+    "otp_required": "La valeur OTP est requise",
+    "password": "Mot de passe",
+    "password_required": "Le mot de passe est requis",
+    "passwords_must_match": "Les mots de passe doivent correspondre",
+    "phone_number": "Numéro de téléphone",
+    "phone_number_required": "Le numéro de téléphone est requis",
+    "remember_me": "Se souvenir de moi",
+    "resend_code": "Renvoyer le code",
+    "save": "Enregistrer",
+    "submit": "Soumettre",
+    "verification": "Vérification",
+    "verification_instruction": "Sélectionnez les coordonnées auxquelles nous devrions envoyer le code de vérification.",
+    "verify": "Vérifier",
+    "via": "Via"
+  },
   "base": {
-    "home":"maison",
-    "my_dashbaord":"Mon tableau de bord",
-    "dashboard": "tableau de bord",
-    "accounts": "comptes",
-    "tickets": "billets",
-    "team": "équipe",
-    "administration": "administration",
-    "new_report": "nouveau graphique",
-    "analytics": "analytique",
-    "reinsurance": "réassurance",
+    "accounts": "Comptes",
+    "administration": "Administration",
+    "analytics": "Analytique",
+    "dashboard": "Tableau de bord",
+    "home": "Accueil",
+    "my_dashboard": "Mon tableau de bord",
+    "my_policies": "Mes politiques",
+    "my_quotations": "Mes devis",
+    "new_report": "Nouveau rapport",
     "no_of_tickets": "Nombre de billets",
-    "view_all": "VOIR TOUT",
-    "summary" : "Résumé",
-    "my_policies": "Mes Polices",
-    "my_quotations": "Mes Devis",
-    "quotation": "citation"
+    "policy": "Police",
+    "quotation": "Devis",
+    "reinsurance": "Réassurance",
+    "summary": "Résumé",
+    "team": "Équipe",
+    "tickets": "Billets",
+    "view_all": "VOIR TOUT"
   },
   "crm": {},
-  "entities": {},
+  "entities": {
+    "account_number": "Numéro de compte",
+    "account_number_required": "Numéro de compte requis",
+    "account_type": "Type de compte",
+    "account_type_required": "Type de compte requis",
+    "actions": "Actions",
+    "activities": "Activités",
+    "add": "Ajouter",
+    "add_new": "Ajouter nouveau",
+    "add_next_of_kin": "Ajouter proche parent",
+    "additional_info": "Informations supplémentaires",
+    "all": "Tout",
+    "aml_details": "Détails de LCB-FT",
+    "amount": "Montant",
+    "assign_manageable_apps": "Attribuer des applications gérables",
+    "assign_role": "Attribuer un rôle",
+    "assign_supervisor": "Attribuer un superviseur",
+    "bank": "Banque",
+    "bank_details": "Détails bancaires",
+    "bank_required": "Banque requise",
+    "banking_details": "Détails bancaires",
+    "basic_information": "Informations de base",
+    "branch": "Agence",
+    "branch_required": "Agence requise",
+    "business_accounts": "Comptes professionnels",
+    "business_unit": "Unité commerciale",
+    "cancel": "Annuler",
+    "category": "Catégorie",
+    "category_required": "Catégorie requise",
+    "cert_reg_no": "Numéro d'enregistrement du certificat",
+    "cert_reg_year": "Année d'enregistrement du certificat",
+    "citizenship": "Citoyenneté",
+    "citizenship_required": "Citoyenneté requise",
+    "city": "Ville",
+    "claim_number": "Numéro de réclamation",
+    "claim_tracking_insights": "Suivi des réclamations",
+    "claims": "Réclamations",
+    "client": "Client",
+    "client_account": "Compte client",
+    "client_details": "Détails du client",
+    "client_information": "Informations client",
+    "client_type": "Type de client",
+    "complete": "Compléter",
+    "contact": "Contact",
+    "contact_details": "Coordonnées",
+    "corporate": "Entreprise",
+    "corporate_details_here": "Détails de l'entreprise ici",
+    "country": "Pays",
+    "country_code_required": "Code pays requis",
+    "country_of_inc": "Pays d'incorporation",
+    "country_of_inc_required": "Pays d'incorporation requis",
+    "country_required": "Pays requis",
+    "county": "Comté",
+    "county_required": "Comté requis",
+    "cover_from": "Couverture de",
+    "cover_to": "Couverture à",
+    "credit": "Crédit",
+    "credit_allowed": "Crédit autorisé",
+    "credit_allowed_required": "Crédit autorisé requis",
+    "credit_limit": "Limite de crédit",
+    "credit_limit_required": "Limite de crédit requise",
+    "currency": "Devise",
+    "currency_required": "Devise requise",
+    "customer_since": "Client depuis",
+    "date_authorized": "Date d'autorisation",
+    "debit": "Débit",
+    "department": "Département",
+    "distribute_channel": "Canal de distribution",
+    "distribute_channel_required": "Canal de distribution requis",
+    "divorced": "Divorcé",
+    "dob": "Date de naissance",
+    "document": "Document",
+    "e_doc_required": "Document électronique requis",
+    "e_docs": "Documents électroniques",
+    "economic_sector": "Secteur économique",
+    "economic_sector_required": "Secteur économique requis",
+    "edit": "Modifier",
+    "email": "E-mail",
+    "email_address": "Adresse e-mail",
+    "employed": "Employé",
+    "employee_name": "Nom de l'employé",
+    "employees": "Employés",
+    "employment_details": "Détails de l'emploi",
+    "entities": "Entités",
+    "entity": "Entité",
+    "entity_name": "Nom de l'entité",
+    "entity_type": "Type d'entité",
+    "female": "Féminin",
+    "filter": "Filtrer",
+    "first_name": "Prénom",
+    "first_name_required": "Prénom requis",
+    "format": "Format",
+    "from": "De",
+    "full_names": "Noms complets",
+    "gender": "Genre",
+    "gender_required": "Genre requis",
+    "go_back": "Revenir",
+    "group": "Groupe",
+    "help": "Aide",
+    "house_name": "Nom/Numéro de la maison",
+    "house_name_required": "Nom/Numéro de la maison requis",
+    "iban": "IBAN",
+    "iban_required": "IBAN requis",
+    "id": "ID",
+    "id_number": "Numéro d'identité",
+    "id_number_required": "Numéro d'identité requis",
+    "id_type": "Type d'ID",
+    "identifier": "Identifiant",
+    "identifier_no": "Numéro d'identifiant",
+    "identity": "Identité",
+    "identity_type": "Type d'identité",
+    "identity_type_required": "Type d'identité requis",
+    "if_consented_to_e_docs": "Si consenti aux documents électroniques",
+    "import_account": "Importer le compte",
+    "import_client": "Importer le client",
+    "import_service_provider": "Importer le fournisseur de services",
+    "import_users": "Importer les utilisateurs",
+    "in_force_premium": "Prime en vigueur",
+    "incurred_amount": "Montant encouru",
+    "individual": "Individuel",
+    "information": "Information",
+    "intermediary": "Intermédiaire",
+    "location": "Emplacement",
+    "loss_ratio": "Ratio de pertes",
+    "ltv": "LTV",
+    "male": "Masculin",
+    "manage_roles": "Gérer les rôles",
+    "maried": "Marié",
+    "marital_status": "État civil",
+    "marital_status_required": "État civil requis",
+    "mobile": "Mobile",
+    "mobile_money": "Mobile Money",
+    "mobile_number": "Numéro de téléphone mobile",
+    "module": "Module",
+    "monthly": "Mensuel",
+    "more_information": "Plus d'informations",
+    "mpay_no": "Numéro MPay",
+    "mpay_no_required": "Numéro MPay requis",
+    "name": "Nom",
+    "nationality": "Nationalité",
+    "nb": "NB",
+    "nb_consented": "NB : Si consenti aux documents électroniques",
+    "new": "Nouveau",
+    "new_account": "Nouveau compte",
+    "new_business_account": "Nouveau compte professionnel",
+    "new_claim": "Nouvelle réclamation",
+    "new_client": "Nouveau client",
+    "new_entity": "Nouvelle entité",
+    "new_policy": "Nouvelle police",
+    "new_quote": "Nouveau devis",
+    "new_service_provider": "Nouveau fournisseur de services",
+    "next": "Suivant",
+    "next_of_kins": "Proches parents",
+    "no": "Non",
+    "no_agent_found": "Aucun agent trouvé",
+    "no_claim_found": "Aucune réclamation trouvée",
+    "no_employees_found": "Aucun employé trouvé",
+    "no_next_of_kin_found": "Aucun proche parent trouvé",
+    "no_policy_found": "Aucune police trouvée",
+    "no_quotation_found": "Aucun devis trouvé",
+    "no_service_provider_found": "Aucun fournisseur de services trouvé",
+    "no_transactions_found": "Aucune transaction trouvée",
+    "no_users_found": "Aucun utilisateur trouvé",
+    "note": "Note",
+    "notification_date": "Date de notification",
+    "occupation": "Occupation",
+    "operation_country": "Pays d'opération",
+    "optional": "Facultatif",
+    "organisation": "Organisation",
+    "other_details": "Autres détails",
+    "other_name": "Autre nom",
+    "other_name_required": "Autre nom requis",
+    "others": "Autres",
+    "outstanding_premium": "Prime en attente",
+    "overdue": "En retard",
+    "overview": "Aperçu",
+    "parent_company": "Société mère",
+    "parent_country": "Pays d'origine",
+    "party_id_type": "Type d'ID de la partie",
+    "party_type": "Type de partie",
+    "passport_number": "Numéro de passeport",
+    "payments": "Paiements",
+    "personal_info": "Informations personnelles",
+    "personnel_rank": "Rang du personnel",
+    "personnel_rank_required": "Rang du personnel requis",
+    "phone_number": "Numéro de téléphone",
+    "phone_number_required": "Numéro de téléphone requis",
+    "physical_address": "Adresse physique",
+    "pin_number": "Numéro PIN",
+    "pin_number_required": "Numéro PIN requis",
+    "po_box": "Boîte postale",
+    "po_box_required": "Boîte postale requise",
+    "policies": "Polices",
+    "policies_in_force": "Polices en vigueur",
+    "policy_number": "Numéro de police",
+    "postal_address_details": "Détails de l'adresse postale",
+    "preferred_channel": "Canal préféré",
+    "preferred_channel_required": "Canal préféré requis",
+    "preferred_contact_channel": "Canal de contact préféré",
+    "preferred_payment_account": "Compte de paiement préféré",
+    "premium": "Prime",
+    "premium_frequency": "Fréquence de prime",
+    "premium_frequency_required": "Fréquence de prime requise",
+    "primary": "Primaire",
+    "primary_id_type": "Type d'ID primaire",
+    "primary_phone_number": "Numéro de téléphone principal",
+    "prime_identity": "Identité principale",
+    "product": "Produit",
+    "products_performance": "Performance des produits",
+    "profile": "Profil",
+    "profile_photo": "Photo de profil",
+    "provider_types": "Types de fournisseurs",
+    "provider_types_required": "Types de fournisseurs requis",
+    "purpose_of_insurance": "Objectif de l'assurance",
+    "purpose_of_insurance_required": "Objectif de l'assurance requis",
+    "quotation_number": "Numéro de devis",
+    "quotations": "Devis",
+    "recent_policies": "Polices récentes",
+    "recent_quotations": "Devis récents",
+    "ref_number": "Numéro de référence",
+    "reg_date": "Date d'enregistrement",
+    "reg_name": "Nom d'enregistrement",
+    "related_accounts": "Comptes liés",
+    "relation": "Relation",
+    "reports": "Rapports",
+    "reports_content": "Contenu des rapports",
+    "required": "Requis",
+    "residential_address_details": "Détails de l'adresse résidentielle",
+    "road": "Rue",
+    "road_required": "Rue requise",
+    "roles": "Rôles",
+    "save": "Enregistrer",
+    "secondary_phone_number": "Numéro de téléphone secondaire",
+    "sector": "Secteur",
+    "select": "Sélectionner",
+    "select_account_type": "Sélectionner le type de compte",
+    "select_channel": "Sélectionner la chaîne",
+    "select_citizenship": "Sélectionner la citoyenneté",
+    "select_currency": "Sélectionner la devise",
+    "select_document": "Sélectionner le document",
+    "select_employment": "Sélectionner l'emploi",
+    "select_gender": "Sélectionner le genre",
+    "select_marital_status": "Sélectionner l'état civil",
+    "select_occupation": "Sélectionner l'occupation",
+    "select_option": "Sélectionner une option",
+    "select_role": "Sélectionner le rôle",
+    "select_sector": "Sélectionner le secteur",
+    "select_supervisor": "Sélectionner le superviseur",
+    "select_title": "Sélectionner le titre",
+    "self_employed": "Travailleur indépendant",
+    "seperated": "Séparé",
+    "service_provider": "Fournisseur de services",
+    "share": "Partager",
+    "short_codes": "Codes courts",
+    "single": "Célibataire",
+    "sms": "SMS",
+    "sms_number": "Numéro de SMS",
+    "sms_number_format": "Format du numéro de SMS",
+    "sms_required": "SMS requis",
+    "source_of_funds": "Source de fonds",
+    "source_of_funds_required": "La source de fonds est obligatoire",
+    "source_of_wealth": "Source de richesse",
+    "staff": "Personnel",
+    "statement_summary": "Résumé de compte",
+    "status": "Statut",
+    "supervisor": "Superviseur",
+    "surname": "Nom de famille",
+    "surname_required": "Le nom de famille est requis",
+    "system": "Système",
+    "tax_id": "Numéro d'identification fiscale",
+    "tel_number": "Numéro de téléphone",
+    "tel_number_format": "Format du numéro de téléphone",
+    "tel_number_required": "Le numéro de téléphone est requis",
+    "title": "Titre",
+    "title_required": "Le titre est requis",
+    "to": "À",
+    "total_amount": "Montant total",
+    "town": "Ville",
+    "town_required": "La ville est requise",
+    "trade_name": "Nom commercial",
+    "trading_names": "Noms commerciaux",
+    "trans_date": "Date de la transaction",
+    "transaction_type": "Type de transaction",
+    "transactions": "Transactions",
+    "transactions_content": "Contenu des transactions",
+    "type": "Type",
+    "type_of_employment": "Type d'emploi",
+    "type_of_employment_required": "Le type d'emploi est requis",
+    "unallocated_cash": "Fonds non alloués",
+    "upcoming": "À venir",
+    "upload_image": "Télécharger une image",
+    "upload_utility_bill": "Télécharger la facture d'eau et d'électricité",
+    "upload_utility_bill_required": "La facture d'eau et d'électricité est requise",
+    "user": "Utilisateur",
+    "user_type": "Type d'utilisateur",
+    "username": "Nom d'utilisateur",
+    "username_required": "Le nom d'utilisateur est requis",
+    "users": "Utilisateurs",
+    "utility_bill": "Facture d'eau et d'électricité",
+    "utility_bill_required": "La facture d'eau et d'électricité est requise",
+    "vat_applicable": "TVA Applicable",
+    "vat_applicable_required": "La TVA est obligatoire",
+    "view": "Voir",
+    "view_all": "Voir tout",
+    "view_claims": "Voir les réclamations",
+    "view_entity_details": "Voir les détails de l'entité",
+    "view_full_report": "Voir le rapport complet",
+    "view_payments": "Voir les paiements",
+    "view_policies": "Voir les politiques",
+    "view_quotations": "Voir les devis",
+    "view_related_accounts": "Voir les comptes liés",
+    "wealth_aml_details": "Détails de lutte contre le blanchiment de capitaux",
+    "wealth_details": "Détails de la richesse",
+    "weekly": "Hebdomadaire",
+    "widowed": "Veuf/Veuve",
+    "with_effect_from": "Avec effet à partir du",
+    "with_effect_from_required": "Avec effet à partir du est requis",
+    "with_effect_to": "Avec effet jusqu'au",
+    "with_effect_to_required": "Avec effet jusqu'au est requis",
+    "withholding_tax": "Retenue d'impôt",
+    "withholding_tax_applicable": "Retenue d'impôt Applicable",
+    "withholding_tax_applicable_required": "La retenue d'impôt Applicable est requise",
+    "withholding_tax_required": "La retenue d'impôt est requise",
+    "yes": "Oui",
+    "zero": "Zéro"
+  },
   "gis": {},
   "lms": {
       "common": {},
       "ind": {},
       "grp": {}
   },
-  "reports": {
+  "report": {
+    "action": "Action",
+    "add": "Ajouter",
+    "add_reports": "Ajouter des rapports",
+    "advanced_filter": "Filtre avancé",
+    "apply": "Appliquer",
+    "ascending": "Croissant",
+    "category": "Catégorie",
+    "column": "Colonne",
+    "complete": "Complet",
+    "condition": "Condition",
+    "confirm_delete_message": "Êtes-vous sûr de vouloir supprimer ?",
+    "continue": "Continuer",
+    "create": "Créer",
+    "create_dashboard": "Créer un tableau de bord",
+    "create_new": "Créer un nouveau",
+    "created_by": "Créé par",
+    "dashboard": "Tableau de bord",
+    "dashboard_desc": "Découvrez facilement des informations et prenez des décisions basées sur les données avec notre tableau de bord interactif.",
+    "dashboard_name": "Nom du tableau de bord",
+    "dashboards": "Tableaux de bord",
+    "date_created": "Date de création",
+    "delete": "Supprimer",
+    "descending": "Décroissant",
+    "download": "Télécharger",
+    "edit": "Modifier",
+    "enter_color_scheme_name": "Entrez le nom du schéma de couleurs",
+    "explore_dashboard": "Explorer le tableau de bord",
+    "explore_reports": "Explorer les rapports",
+    "filter": "Filtrer",
+    "Filters": "Filtres",
+    "finance": "Finance",
+    "glance_into_dashboards": "Un coup d'œil sur les tableaux de bord",
+    "glance_into_reports": "Un coup d'œil sur les rapports",
+    "go_back": "Retour",
+    "id": "ID",
+    "my_reports": "Mes rapports",
+    "name": "Nom",
+    "net_premium": "Prime nette",
+    "no": "Non",
+    "operations": "Opérations",
+    "operator": "Opérateur",
+    "other": "Autre",
+    "pick_destination": "Choisissez une destination pour votre rapport",
+    "pick_square": "Choisissez un carré pour ajouter de la couleur",
+    "quota_premium": "Prime de quota",
+    "rename": "Renommer",
+    "report": "Rapport",
+    "report_desc": "Explorez les principales mesures de performance et tendances pour prendre des décisions éclairées et optimiser votre stratégie basée sur les données.",
+    "report_name": "Nom du rapport",
+    "reports": "Rapports",
+    "save": "Enregistrer",
+    "share": "Partager",
+    "shared_reports": "Rapports partagés",
+    "sort": "Trier",
+    "style": "Style",
+    "subject_area": "Domaine d'étude",
+    "value": "Valeur",
+    "view_all": "Tout afficher",
+    "visualization": "Visualisation",
+    "yes": "Oui",
+    "ytd_premium": "Prime YTD (Année à ce jour)"
   },
   "setups": {}
 }
