--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1,33 +1,451 @@
 {
   "admin": {},
-  "auth": {},
+  "auth": {
+    "change_password": "Badilisha Nywila",
+    "change_password_instruction": "Weka nywila yako pendwa",
+    "confirm_password": "Thibitisha Nywila",
+    "confirm_password_required": "Thibitisha Nywila inahitajika",
+    "email_address": "Anwani ya Barua pepe",
+    "email_invalid": "Anwani ya barua pepe si sahihi",
+    "enhancing_business_performance": "Kuboresha Utendaji wa Biashara",
+    "enter_email_and_pass": "Ingiza anwani yako ya barua pepe na nywila kufikia akaunti.",
+    "forgot_password": "Umesahau nywila yako?",
+    "forgot_password_instruction": "Ingiza anwani yako ya barua pepe na namba yako ya simu iliyosajiliwa kuthibitisha akaunti yako.",
+    "lead_text": "Zidisha fursa za biashara, punguza gharama, na fikia faida kwa kuelekeza Teknolojia ya Habari na Biashara yako kupitia kisasa na mageuzi ya IT.",
+    "login": "Ingia",
+    "new_password": "Nywila Mpya",
+    "new_password_invalid": "Nywila lazima iwe angalau wahusika 6",
+    "otp": "Nenosiri la Mara moja",
+    "otp_instruction": "Nambari ya uthibitisho ya nambari nne imetumwa kwa",
+    "otp_required": "Thamani ya OTP inahitajika",
+    "password": "Nywila",
+    "password_required": "Nywila inahitajika",
+    "passwords_must_match": "Nywila lazima ziendane",
+    "phone_number": "Namba ya Simu",
+    "phone_number_required": "Namba ya Simu inahitajika",
+    "remember_me": "Nikumbuke",
+    "resend_code": "Tuma tena Msimbo",
+    "save": "Hifadhi",
+    "submit": "Weka",
+    "verification": "Uthibitisho",
+    "verification_instruction": "Chagua maelezo ya mawasiliano tunayopaswa kutuma nambari ya uthibitisho.",
+    "verify": "Thibitisha",
+    "via": "Kupitia"
+  },
   "base": {
-    "home":"nyumbani",
-    "my_dashbaord":"dashibodi yangu",
-    "dashboard": "dashibodi",
     "accounts": "Akaunti",
-    "tickets": "Tiketi",
-    "team": "Timu",
     "administration": "Utawala",
-    "new_report": "grafu_mpya",
     "analytics": "Uchambuzi",
-    "reinsurance": "Bima ya kurejesha",
-    "no_of_tickets": "Idadi ya Tiketi",
-    "view_all": "ANGALIA YOTE",
-    "summary" : "Muhtasari",
+    "dashboard": "Dashibodi",
+    "home": "Nyumbani",
+    "my_dashboard": "Dashibodi Yangu",
     "my_policies": "Sera Zangu",
     "my_quotations": "Nukuu Zangu",
-    "quotation": "nukuu"
+    "new_report": "Ripoti Mpya",
+    "no_of_tickets": "Idadi ya Tiketi",
+    "policy": "Sera",
+    "quotation": "Nukuu",
+    "reinsurance": "Bima ya Kurudishiwa",
+    "summary": "Muhtasari",
+    "team": "Timu",
+    "tickets": "Tiketi",
+    "view_all": "ONA YOTE"
   },
   "crm": {},
-  "entities": {},
+  "entities": {
+    "account_number": "Nambari ya Akaunti",
+    "account_number_required": "Nambari ya Akaunti inahitajika",
+    "account_type": "Aina ya Akaunti",
+    "account_type_required": "Aina ya Akaunti inahitajika",
+    "actions": "Vitendo",
+    "activities": "Shughuli",
+    "add": "Ongeza",
+    "add_new": "Ongeza Mpya",
+    "add_next_of_kin": "Ongeza Ndugu wa Karibu",
+    "additional_info": "Taarifa Zaidi",
+    "all": "Zote",
+    "aml_details": "Maelezo ya AML",
+    "amount": "Kiasi",
+    "assign_manageable_apps": "Tenga Programu Zinazoweza Kusimamiwa",
+    "assign_role": "Tenga Jukumu",
+    "assign_supervisor": "Tenga Msimamizi",
+    "bank": "Benki",
+    "bank_details": "Maelezo ya Benki",
+    "bank_required": "Benki inahitajika",
+    "banking_details": "Maelezo ya Benki",
+    "basic_information": "Taarifa Msingi",
+    "branch": "Tawi",
+    "branch_required": "Tawi inahitajika",
+    "business_accounts": "Akaunti za Biashara",
+    "business_unit": "Kitengo cha Biashara",
+    "cancel": "Ghairi",
+    "category": "Jamii",
+    "category_required": "Jamii inahitajika",
+    "cert_reg_no": "Nambari ya Usajili wa Cheti",
+    "cert_reg_year": "Mwaka wa Usajili wa Cheti",
+    "citizenship": "Uraia",
+    "citizenship_required": "Uraia unahitajika",
+    "city": "Jiji",
+    "claim_number": "Nambari ya Malipo",
+    "claim_tracking_insights": "Ufuatiliaji wa Madai",
+    "claims": "Madai",
+    "client": "Mteja",
+    "client_account": "Akaunti ya Mteja",
+    "client_details": "Maelezo ya Mteja",
+    "client_information": "Taarifa za Mteja",
+    "client_type": "Aina ya Mteja",
+    "complete": "Kamilisha",
+    "contact": "Wasiliana",
+    "contact_details": "Maelezo ya Mawasiliano",
+    "corporate": "Kampuni",
+    "corporate_details_here": "Maelezo ya Kampuni Hapa",
+    "country": "Nchi",
+    "country_code_required": "Nambari ya Nchi inahitajika",
+    "country_of_inc": "Nchi ya Kuanzisha",
+    "country_of_inc_required": "Nchi ya Kuanzisha inahitajika",
+    "country_required": "Nchi inahitajika",
+    "county": "Kaunti",
+    "county_required": "Kaunti inahitajika",
+    "cover_from": "Ficha Kutoka",
+    "cover_to": "Ficha Hadi",
+    "credit": "Mkopo",
+    "credit_allowed": "Mkopo Kuruhusiwa",
+    "credit_allowed_required": "Mkopo Kuruhusiwa inahitajika",
+    "credit_limit": "Kikomo cha Mkopo",
+    "credit_limit_required": "Kikomo cha Mkopo inahitajika",
+    "currency": "Sarafu",
+    "currency_required": "Sarafu inahitajika",
+    "customer_since": "Mteja Tangu",
+    "date_authorized": "Tarehe ya Kumruhusu",
+    "debit": "Debiti",
+    "department": "Idara",
+    "distribute_channel": "Gawa Channel",
+    "distribute_channel_required": "Channel ya Kugawa inahitajika",
+    "divorced": "Ametalikiana",
+    "dob": "Tarehe ya Kuzaliwa",
+    "document": "Hati",
+    "e_doc_required": "E-Doc inahitajika",
+    "e_docs": "E-Docs",
+    "economic_sector": "Sekta ya Uchumi",
+    "economic_sector_required": "Sekta ya Uchumi inahitajika",
+    "edit": "Hariri",
+    "email": "Barua pepe",
+    "email_address": "Anwani ya Barua pepe",
+    "employed": "Amefanya Kazi",
+    "employee_name": "Jina la Mfanyakazi",
+    "employees": "Wafanyakazi",
+    "employment_details": "Maelezo ya Ajira",
+    "entities": "Viumbe",
+    "entity": "Kiumbe",
+    "entity_name": "Jina la Kiumbe",
+    "entity_type": "Aina ya Kiumbe",
+    "female": "Mwanamke",
+    "filter": "Chuja",
+    "first_name": "Jina la Kwanza",
+    "first_name_required": "Jina la Kwanza linahitajika",
+    "format": "Muundo",
+    "from": "Kutoka",
+    "full_names": "Jina Kamili",
+    "gender": "Jinsia",
+    "gender_required": "Jinsia inahitajika",
+    "go_back": "Rudi Nyuma",
+    "group": "Kundi",
+    "help": "Msaada",
+    "house_name": "Jina la Nyumba/Na",
+    "house_name_required": "Jina la Nyumba/Na linahitajika",
+    "iban": "IBAN",
+    "iban_required": "IBAN inahitajika",
+    "id": "Kitambulisho",
+    "id_number": "Nambari ya Kitambulisho",
+    "id_number_required": "Nambari ya Kitambulisho inahitajika",
+    "id_type": "Aina ya Kitambulisho",
+    "identifier": "Kitambulisho",
+    "identifier_no": "Nambari ya Kitambulisho",
+    "identity": "Utambulisho",
+    "identity_type": "Aina ya Utambulisho",
+    "identity_type_required": "Aina ya Utambulisho inahitajika",
+    "if_consented_to_e_docs": "Ikiwa Konsenti kwa E-Docs",
+    "import_account": "Ingiza Akaunti",
+    "import_client": "Ingiza Mteja",
+    "import_service_provider": "Ingiza Mtoa Huduma",
+    "import_users": "Ingiza Watumiaji",
+    "in_force_premium": "Ada ya Kuendelea",
+    "incurred_amount": "Jumla ya Kiasi",
+    "individual": "Mtu Binafsi",
+    "information": "Taarifa",
+    "intermediary": "Mpatanishi",
+    "location": "Eneo",
+    "loss_ratio": "Kiwango cha Hasara",
+    "ltv": "LTV",
+    "male": "Mwanaume",
+    "manage_roles": "Simamia Majukumu",
+    "maried": "Ameoana",
+    "marital_status": "Hali ya Ndoa",
+    "marital_status_required": "Hali ya Ndoa inahitajika",
+    "mobile": "Simu ya Mkononi",
+    "mobile_money": "Pesa za Simu",
+    "mobile_number": "Nambari ya Simu ya Mkononi",
+    "module": "Moduli",
+    "monthly": "Kila Mwezi",
+    "more_information": "Taarifa Zaidi",
+    "mpay_no": "Nambari ya MPay",
+    "mpay_no_required": "Nambari ya MPay inahitajika",
+    "name": "Jina",
+    "nationality": "Uraia",
+    "nb": "NB",
+    "nb_consented": "NB: Ikiwa amekubaliana na E-dokumenti",
+    "new": "Mpya",
+    "new_account": "Akaunti Mpya",
+    "new_business_account": "Akaunti ya Biashara Mpya",
+    "new_claim": "Madai Mapya",
+    "new_client": "Mteja Mpya",
+    "new_entity": "Kiumbe Kipya",
+    "new_policy": "Sera Mpya",
+    "new_quote": "Nukuu Mpya",
+    "new_service_provider": "Mtoa Huduma Mpya",
+    "next": "Ifuatayo",
+    "next_of_kins": "Wazazi wa Karibu",
+    "no": "Hapana",
+    "no_agent_found": "Hakuna Wakala Aliyepatikana",
+    "no_claim_found": "Hakuna Madai Yaliyopatikana",
+    "no_employees_found": "Hakuna Wafanyakazi Waliohudhuria",
+    "no_next_of_kin_found": "Hakuna Ndugu wa Karibu Aliyepatikana",
+    "no_policy_found": "Hakuna Sera Yaliyopatikana",
+    "no_quotation_found": "Hakuna Nukuu Ilipatikana",
+    "no_service_provider_found": "Hakuna Mtoa Huduma Aliyepatikana",
+    "no_transactions_found": "Hakuna Shughuli Zilizopatikana",
+    "no_users_found": "Hakuna Watumiaji Waliohudhuria",
+    "note": "Taarifa",
+    "notification_date": "Tarehe ya Arifa",
+    "occupation": "Shughuli",
+    "operation_country": "Nchi ya Uendeshaji",
+    "optional": "Hiari",
+    "organisation": "Shirika",
+    "other_details": "Maelezo Mengine",
+    "other_name": "Jina Lingine",
+    "other_name_required": "Jina Lingine linahitajika",
+    "others": "Wengine",
+    "outstanding_premium": "Ada Bora",
+    "overdue": "Kucheleweshwa",
+    "overview": "Muhtasari",
+    "parent_company": "Kampuni Mama",
+    "parent_country": "Nchi ya Wazazi",
+    "party_id_type": "Aina ya Kitambulisho cha Chama",
+    "party_type": "Aina ya Chama",
+    "passport_number": "Nambari ya Pasipoti",
+    "payments": "Malipo",
+    "personal_info": "Taarifa Binafsi",
+    "personnel_rank": "Daraja la Wafanyakazi",
+    "personnel_rank_required": "Daraja la Wafanyakazi linahitajika",
+    "phone_number": "Nambari ya Simu",
+    "phone_number_required": "Nambari ya Simu inahitajika",
+    "physical_address": "Anwani ya Fizi",
+    "pin_number": "Nambari ya PIN",
+    "pin_number_required": "Nambari ya PIN inahitajika",
+    "po_box": "S.L.P.",
+    "po_box_required": "S.L.P. inahitajika",
+    "policies": "Sera",
+    "policies_in_force": "Sera Zilizo Katika Nguvu",
+    "policy_number": "Nambari ya Sera",
+    "postal_address_details": "Maelezo ya Anwani ya Posta",
+    "preferred_channel": "Channel Pendwa",
+    "preferred_channel_required": "Channel Pendwa inahitajika",
+    "preferred_contact_channel": "Channel Pendwa cha Mawasiliano",
+    "preferred_payment_account": "Akaunti Pendwa ya Malipo",
+    "premium": "Ada",
+    "premium_frequency": "Marudio ya Ada",
+    "premium_frequency_required": "Marudio ya Ada inahitajika",
+    "primary": "Msingi",
+    "primary_id_type": "Aina ya Kitambulisho Msingi",
+    "primary_phone_number": "Nambari ya Simu Msingi",
+    "prime_identity": "Utambulisho Mkuu",
+    "product": "Bidhaa",
+    "products_performance": "Utendaji wa Bidhaa",
+    "profile": "Profaili",
+    "profile_photo": "Picha ya Profaili",
+    "provider_types": "Aina za Watoa Huduma",
+    "provider_types_required": "Aina za Watoa Huduma zinahitajika",
+    "purpose_of_insurance": "Lengo la Bima",
+    "purpose_of_insurance_required": "Lengo la Bima linahitajika",
+    "quotation_number": "Nambari ya Nukuu",
+    "quotations": "Nukuu",
+    "recent_policies": "Sera Mpya",
+    "recent_quotations": "Nukuu Mpya",
+    "ref_number": "Nambari ya Kumbukumbu",
+    "reg_date": "Tarehe ya Usajili",
+    "reg_name": "Jina la Usajili",
+    "related_accounts": "Akaunti Zinazohusiana",
+    "relation": "Mahusiano",
+    "reports": "Ripoti",
+    "reports_content": "Yaliyomo kwenye Ripoti",
+    "required": "Inahitajika",
+    "residential_address_details": "Maelezo ya",
+    "road": "Barabara",
+    "road_required": "Barabara inahitajika",
+    "roles": "Vyeo",
+    "save": "Hifadhi",
+    "secondary_phone_number": "Nambari ya Simu ya Pili",
+    "sector": "Sekta",
+    "select": "Chagua",
+    "select_account_type": "Chagua Aina ya Akaunti",
+    "select_channel": "Chagua Channel",
+    "select_citizenship": "Chagua Uraia",
+    "select_currency": "Chagua Sarafu",
+    "select_document": "Chagua Hati",
+    "select_employment": "Chagua Ajira",
+    "select_gender": "Chagua Jinsia",
+    "select_marital_status": "Chagua Hali ya Ndoa",
+    "select_occupation": "Chagua Shughuli",
+    "select_option": "Chagua Chaguo",
+    "select_role": "Chagua Jukumu",
+    "select_sector": "Chagua Sekta",
+    "select_supervisor": "Chagua Msimamizi",
+    "select_title": "Chagua Jina la Heshima",
+    "self_employed": "Mwenye Kujiajiri",
+    "seperated": "Aliyetalikiana",
+    "service_provider": "Mtoa Huduma",
+    "share": "Gawanya",
+    "short_codes": "Nambari Fupi",
+    "single": "Mmoja",
+    "sms": "SMS",
+    "sms_number": "Nambari ya SMS",
+    "sms_number_format": "Muundo wa Nambari ya SMS",
+    "sms_required": "SMS inahitajika",
+    "source_of_funds": "Chanzo cha Fedha",
+    "source_of_funds_required": "Chanzo cha Fedha kinahitajika",
+    "source_of_wealth": "Chanzo cha Utajiri",
+    "staff": "Wafanyakazi",
+    "statement_summary": "Muhtasari wa Taarifa",
+    "status": "Hali",
+    "supervisor": "Msimamizi",
+    "surname": "Jina la Ukoo",
+    "surname_required": "Jina la Ukoo ni lazima",
+    "system": "Mfumo",
+    "tax_id": "Namba ya Ushuru",
+    "tel_number": "Namba ya Simu",
+    "tel_number_format": "Muundo wa Namba ya Simu",
+    "tel_number_required": "Namba ya Simu ni lazima",
+    "title": "Cheo",
+    "title_required": "Cheo ni lazima",
+    "to": "Kwa",
+    "total_amount": "Jumla ya Kiasi",
+    "town": "Mji",
+    "town_required": "Mji ni lazima",
+    "trade_name": "Jina la Biashara",
+    "trading_names": "Majina ya Biashara",
+    "trans_date": "Tarehe ya Kufanya",
+    "transaction_type": "Aina ya Kufanya",
+    "transactions": "Shughuli",
+    "transactions_content": "Yaliyomo kwenye Shughuli",
+    "type": "Aina",
+    "type_of_employment": "Aina ya Ajira",
+    "type_of_employment_required": "Aina ya Ajira ni lazima",
+    "unallocated_cash": "Fedha Zisizotengwa",
+    "upcoming": "Inayokuja",
+    "upload_image": "Pakia Picha",
+    "upload_utility_bill": "Pakia Bili ya Huduma",
+    "upload_utility_bill_required": "Pakia Bili ya Huduma ni lazima",
+    "user": "Mtumiaji",
+    "user_type": "Aina ya Mtumiaji",
+    "username": "Jina la Mtumiaji",
+    "username_required": "Jina la Mtumiaji ni lazima",
+    "users": "Watumiaji",
+    "utility_bill": "Bili ya Huduma",
+    "utility_bill_required": "Bili ya Huduma ni lazima",
+    "vat_applicable": "VAT Inayoweza Kutumika",
+    "vat_applicable_required": "VAT Inayoweza Kutumika ni lazima",
+    "view": "Tazama",
+    "view_all": "Tazama Yote",
+    "view_claims": "Tazama Madai",
+    "view_entity_details": "Tazama Maelezo ya Kifaa",
+    "view_full_report": "Tazama Ripoti Kamili",
+    "view_payments": "Tazama Malipo",
+    "view_policies": "Tazama Sera",
+    "view_quotations": "Tazama Mapendekezo",
+    "view_related_accounts": "Tazama Akaunti Zinazohusiana",
+    "wealth_aml_details": "Maelezo ya AML ya Mali",
+    "wealth_details": "Maelezo ya Mali",
+    "weekly": "Kila Wiki",
+    "widowed": "Mjane",
+    "with_effect_from": "Kuanzia Tarehe",
+    "with_effect_from_required": "Kuanzia Tarehe ni lazima",
+    "with_effect_to": "Hadi Tarehe",
+    "with_effect_to_required": "Hadi Tarehe ni lazima",
+    "withholding_tax": "Ushuru wa Kutoza",
+    "withholding_tax_applicable": "Ushuru wa Kutoza Unavyoweza Kutumika",
+    "withholding_tax_applicable_required": "Ushuru wa Kutoza Unavyoweza Kutumika ni lazima",
+    "withholding_tax_required": "Ushuru wa Kutoza ni lazima",
+    "yes": "Ndio",
+    "zero": "Sifuri"
+},
   "gis": {},
   "lms": {
       "common": {},
       "ind": {},
       "grp": {}
   },
-  "reports": {
+  "report": {
+    "action": "Hatua",
+    "add": "Ongeza",
+    "add_reports": "Ongeza Ripoti(z)",
+    "advanced_filter": "Chuja ya Juu",
+    "apply": "Tumia",
+    "ascending": "Inapanda",
+    "category": "Jamii",
+    "column": "Kolamu",
+    "complete": "Kamili",
+    "condition": "Hali",
+    "confirm_delete_message": "Je, uko uhakika unataka kufuta?",
+    "continue": "Endelea",
+    "create": "Unda",
+    "create_dashboard": "Unda Dashibodi",
+    "create_new": "Unda Mpya",
+    "created_by": "Imeundwa Na",
+    "dashboard": "Dashibodi",
+    "dashboard_desc": "Gundua ufahamu na fanya maamuzi yanayotokana na data kwa urahisi kupitia dashibodi yetu inayoshirikisha.",
+    "dashboard_name": "Jina la Dashibodi",
+    "dashboards": "Dashibodi",
+    "date_created": "Tarehe Ilivyoumbwa",
+    "delete": "Futa",
+    "descending": "Inashuka",
+    "download": "Pakua",
+    "edit": "Hariri",
+    "enter_color_scheme_name": "Ingiza Jina la Mpango wa Rangi",
+    "explore_dashboard": "Chunguza Dashibodi",
+    "explore_reports": "Chunguza Ripoti",
+    "filter": "Chuja",
+    "Filters": "Chujio",
+    "finance": "Fedha",
+    "glance_into_dashboards": "Macho ya haraka katika dashibodi",
+    "glance_into_reports": "Macho ya haraka katika ripoti",
+    "go_back": "Rudi Nyuma",
+    "id": "ID",
+    "my_reports": "Ripoti Zangu",
+    "name": "Jina",
+    "net_premium": "Ada ya Mtandaoni",
+    "no": "Hapana",
+    "operations": "Operesheni",
+    "operator": "Mwendeshaji",
+    "other": "Nyingine",
+    "pick_destination": "Chagua marudio ya ripoti yako",
+    "pick_square": "Chagua mraba wa kuongeza rangi",
+    "quota_premium": "Ada ya Hisa",
+    "rename": "Badilisha Jina",
+    "report": "Ripoti",
+    "report_desc": "Chunguza metrics muhimu ya utendaji na mwelekeo ili kufanya maamuzi yaliyo na habari na kuongeza mkakati wako unaotokana na data.",
+    "report_name": "Jina la Ripoti",
+    "reports": "Ripoti",
+    "save": "Hifadhi",
+    "share": "Shiriki",
+    "shared_reports": "Ripoti Zilizoshirikiwa",
+    "sort": "Panga",
+    "style": "Mtindo",
+    "subject_area": "Eneo la Somo",
+    "value": "Thamani",
+    "view_all": "Ona Zote",
+    "visualization": "Uchoraji Ramani",
+    "yes": "Ndio",
+    "ytd_premium": "Ada ya Mwaka hadi Leo"
   },
   "setups": {}
 }
